--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -9,5 +9,5 @@ jobs:
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'Thank you for actively participating in AI4GoodVoicePicking and creating your first issue!'
-        pr-message: 'Exiting! Thank you for creating your first Pull Request for AI4GoodVoicePicking.'
+        issue-message: "Thank you for actively participating in AI4GoodVoicePicking and creating your first issue!"
+        pr-message: "Exiting! Thank you for creating your first Pull Request for AI4GoodVoicePicking."
